<resources>
    <string name="app_name">LavStaRitaOperacao</string>
    <string name="app_name_label">Lavanderia Sta Rita</string>
    <string name="on_loading">Aguarde…</string>

    <string name="img_description">image</string>
    <string name="edt_cpf">CPF:</string>
    <string name="edt_client"> </string>

    <string name="txt_painel_operation">Painel Principal</string>
    <string name="txt_painel_adicionar">Cadastrar Serviço</string>
    <string name="txt_editar_service">Editar Serviço</string>
    <string name="txt_painel_configurar">Configurações</string>
    <string name="label_services">Serviços: </string>
    <string name="btn_finalizado"><u>+ Finalizado </u></string>
    <string name="btn_pendente"><u>+ Pendente </u></string>
    <string name="btn_todos"><u>+ Todos </u></string>
    <string name="label_price">Orçamento em R$: </string>
    <string name="label_services_qtd">Serviços: %S </string>
    <string name="label_client_name">Nome do cliente: </string>
    <string name="label_id_service">ID: %S </string>
    <string name="label_client_fone">Telefone de contato: </string>
    <string name="label_client_itens">Items: %S </string>
    <string name="label_client_total_itens">Total de Items: </string>
    <string name="label_client_observation">Observações: </string>
    <string name="label_status_service">Status do serviço: </string>
    <string name="label_incluir"><u>+ INCLUIR</u></string>
    <string name="label_payment">Pago antecipado ?  </string>
    <string name="btn_registrar_service">Registrar Serviço</string>
    <string name="btn_add_service">Adicionar serviço</string>
    <string name="dialog_add_title">Selecione o tipo de item:</string>
    <string name="btn_increment">+</string>
    <string name="btn_decrement">-</string>
    <string name="btn_cancelar_item">Cancelar</string>
    <string name="btn_adicionar_item">Adicionar Item</string>
    <string name="hint_itenm_name">item-name</string>
    <string name="item_qtd_default">1</string>
    <string name="status_lavar">Em Lavagem</string>
    <string name="status_concluido">Concluído</string>

</resources>