<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/txtTitleDialogStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:gravity="center"
        android:text="@string/dialog_add_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Selecione o tipo de item:"/>

    <GridLayout
        android:id="@+id/containerItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:minHeight="@dimen/size_100"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineInit"
        app:layout_constraintTop_toBottomOf="@id/txtTitleDialogStep"/>

    <EditText
        android:id="@+id/edtDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:digits="qwertyuiopasdfghjklzxcvbnm áãâóõéíçê QWERTYUIOPASDFGHJKLZXCVBNM -,."
        android:imeOptions="actionDone"
        android:inputType="text|textCapSentences"
        android:maxLength="200"
        android:maxLines="3"
        android:hint="@string/hint_itenm_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        app:layout_constraintStart_toStartOf="@id/guidelineInit"
        app:layout_constraintTop_toBottomOf="@id/containerItems" />

    <TextView
        android:id="@+id/qtdItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20"
        android:gravity="center"
        android:text="@string/item_qtd_default"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/edtDetail"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintTop_toTopOf="@id/edtDetail" />

    <Button
        android:id="@+id/btnIncrement"
        android:layout_width="@dimen/size_62"
        android:layout_height="@dimen/size_44"
        android:layout_marginStart="@dimen/size_20"
        android:background="@drawable/button_style"
        android:text="@string/btn_increment"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintBottom_toBottomOf="@id/qtdItems"
        app:layout_constraintStart_toEndOf="@id/qtdItems"
        app:layout_constraintTop_toTopOf="@id/qtdItems"/>

    <Button
        android:id="@+id/btnDecrement"
        android:layout_width="@dimen/size_62"
        android:layout_height="@dimen/size_44"
        android:background="@drawable/button_style"
        android:text="@string/btn_decrement"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintBottom_toBottomOf="@id/qtdItems"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/qtdItems" />

    <Button
        android:id="@+id/btnSkipItem"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_32"
        android:layout_marginEnd="@dimen/size_20"
        android:background="@drawable/button_style"
        android:text="@string/btn_cancelar_item"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_lav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineInit"
        app:layout_constraintTop_toBottomOf="@+id/edtDetail"
        tools:text="Cancelar" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="@dimen/size_160"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20"
        android:layout_marginTop="@dimen/size_32"
        android:background="@drawable/button_style"
        android:text="@string/btn_adicionar_item"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_lav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/edtDetail"
        tools:text="Adicionar Item" />

</androidx.constraintlayout.widget.ConstraintLayout>