<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/loadingBox"
        layout="@layout/loading_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="invisible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60"/>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_24"
        android:fontFamily="@font/advent_pro"
        android:text="@string/txt_painel_operation"
        android:textColor="@color/blue_lav"
        android:textSize="@dimen/font_size_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/img_description"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="@id/txtAppName"
        app:layout_constraintStart_toStartOf="@id/guideCenter"
        app:layout_constraintTop_toTopOf="@id/txtAppName"/>

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/img_description"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/txtAppName"
        app:layout_constraintEnd_toStartOf="@id/btnConfig"
        app:layout_constraintStart_toEndOf="@id/btnRefresh"
        app:layout_constraintTop_toTopOf="@id/txtAppName"/>

    <ImageButton
        android:id="@+id/btnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/img_description"
        android:src="@drawable/ic_config"
        app:layout_constraintBottom_toBottomOf="@id/txtAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSearch"
        app:layout_constraintTop_toTopOf="@id/txtAppName" />

    <TextView
        android:id="@+id/labelServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/label_services"
        android:textColor="@color/blue_lav"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"
        tools:text="Serviços:" />

    <View
        android:id="@+id/view_services"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_2"
        android:layout_marginEnd="@dimen/size_10"
        android:background="@color/blue_lav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelServices"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvServices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginTop="@dimen/size_4"
        android:layout_marginEnd="@dimen/size_8"
        android:layout_marginBottom="@dimen/size_4"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_services"
        tools:itemCount="5"
        tools:listitem="@layout/item_service"
        tools:orientation="vertical"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAddsService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_20"
        android:text="@string/btn_add_service"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_lav"
        app:icon="@drawable/ic_add_service"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>